--- a/src/App.css
+++ b/src/App.css
@@ -306,8 +306,10 @@
 
  /* ------------------------------- FOOTER --------------------------------------------- */
 
+ /* ------------------------------- MOBILE NAV --------------------------------------------- */
+
  .mobile_nav {
-     background: rgba(0,255,255,.2);
+     background: rgba(0, 255, 255, .2);
      display: none;
  }
 
@@ -315,18 +317,107 @@
      padding: 10px 30px;
  }
 
- .right{
+ .right {
      float: right;
  }
 
- .close{
+ .close {
      position: absolute;
      right: 5%;
      top: 2%;
      z-index: 9;
  }
 
- .close i{
+ .close i {
      padding: 10px;
      display: none;
  }
+
+ /* ------------------------------- MOBILE NAV --------------------------------------------- */
+
+ /* ------------------------------- JOINUS --------------------------------------------- */
+
+ .joinus .container .row{
+     display: flex;
+     justify-content: space-evenly;
+ }
+
+ .setup {
+     border: 1px solid #dfdfdf;
+     text-align: center;
+     width: 400px;
+     padding: 50px;
+     background: rgba(0, 209, 178, .2);
+     cursor: pointer;
+     border-radius: .4rem;
+     transition: .4s ease-out;
+ }
+
+ .setup:hover {
+     color: #fff;
+     background: rgb(0, 209, 178);
+ }
+
+ .setup:hover .text_gray {
+     color: #333;
+ }
+
+ .setup span {
+     text-transform: uppercase;
+     font-size: 60px;
+ }
+
+ .step {
+     margin: auto;
+     width: 60%;
+     height: 1px;
+     background: #dfdfdf;
+     position: relative;
+     margin-bottom: 4rem;
+ }
+
+ .step div {
+     position: absolute;
+ }
+
+ .bubble {
+     width: 40px;
+     height: 40px;
+     border-radius: 50%;
+     background: rgb(0, 209, 178);
+     top: -20px;
+     padding-top: 10px;
+     color: #fff;
+     text-align: center;
+ }
+
+ .step p {
+     margin-top: 30px;
+     margin-left: -10px;
+ }
+
+ .two {
+     left: 50%;
+ }
+
+ .two .bubble {
+     background: #dfdfdf;
+ }
+
+ .three {
+     right: -4%;
+ }
+
+ .three .bubble {
+    background: #dfdfdf;
+}
+
+.text_center{
+    text-align: center !important;
+}
+
+.spacing_md{
+    margin-bottom: 2rem;
+}
+
+ /* ------------------------------- JOINUS --------------------------------------------- */
