--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,6 @@
      flex-direction: column;
  }
 
- .App section {
-     padding: 1rem 0;
- }
-
  .nav {
      flex: 1;
      display: flex;
@@ -96,7 +92,7 @@
      font-weight: bold;
  }
 
- /* ------------------------------- NAVBAR --------------------------------------------- */
+ /* ------------------------------- NAVBAR -------------------------------------------- */
 
  /* ------------------------------- MAIN --------------------------------------------- */
 
@@ -227,6 +223,7 @@
      height: 360px;
      width: 64%;
      margin-left: -40px;
+     margin-bottom: 2rem !important;
  }
 
  .slick-slider .slick-list {
@@ -273,13 +270,9 @@
      font-size: 30px !important;
  }
 
- /* ------------------------------- MAIN --------------------------------------------- */
+ /* ------------------------------- MAIN ------------------------------------------------ */
 
  /* ------------------------------- FOOTER --------------------------------------------- */
-
- .footer {
-     padding: 3rem 0 2rem;
- }
 
  .footer .container {
      display: flex;
@@ -310,7 +303,7 @@
 
  /* ------------------------------- FOOTER --------------------------------------------- */
 
- /* ------------------------------- MOBILE NAV --------------------------------------------- */
+ /* ------------------------------- MOBILE NAV ---------------------------------------- */
 
  .mobile_nav {
      background: rgba(0, 255, 255, .2);
@@ -337,7 +330,7 @@
      display: none;
  }
 
- /* ------------------------------- MOBILE NAV --------------------------------------------- */
+ /* ------------------------------- MOBILE NAV ------------------------------------------ */
 
  /* ------------------------------- JOINUS --------------------------------------------- */
 
