--- a/src/Responsive.css
+++ b/src/Responsive.css
@@ -24,9 +24,6 @@
     .slick-track {
         transform: translate3d(2px, 2px 2px) !important;
     }
-    .slick-slide div:nth-child(1) {
-        margin: 0;
-    }
     .footer .container div li {
         display: block;
     }
@@ -60,9 +57,9 @@
         display: inline;
         padding: 20px;
     }
-    .tutor_card {
-        width: 200px;
-    }
+    /* .tutor_card {
+        width: 100%;
+    } */
     .step {
         display: none;
     }
